[gd_scene load_steps=6 format=3 uid="uid://cy2ymcfk2tejn"]

[ext_resource type="Script" uid="uid://7rp8e3m8fvuh" path="res://story/book/story_page_entry.gd" id="1_xif0c"]
[ext_resource type="PackedScene" uid="uid://d0ecexfpobl4m" path="res://story/book/dialog_button.tscn" id="2_6tquj"]
[ext_resource type="Script" uid="uid://rbc1te7wgcy0" path="res://custom_nodes/control/typing_label.gd" id="3_pf20m"]
[ext_resource type="Script" uid="uid://ral4tq3ea3w4" path="res://addons/collapsible_container/collapsible_elements/collapsible_container.gd" id="4_nyvyp"]
[ext_resource type="PackedScene" uid="uid://bpqkh512g0nmb" path="res://story/hit_dice_selection/hit_dice_selection.tscn" id="5_15pgc"]

[node name="StoryPageEntry" type="PanelContainer" node_paths=PackedStringArray("_background", "_description", "_choices", "_hit_dice_selection", "_hit_dice_selection_cc")]
offset_right = 641.0
offset_bottom = 260.0
size_flags_vertical = 3
script = ExtResource("1_xif0c")
_background = NodePath("Background")
_description = NodePath("MarginContainer/HBoxContainer/VBoxContainer/Description")
_choices = NodePath("MarginContainer/HBoxContainer/VBoxContainer/Choices")
_hit_dice_selection = NodePath("MarginContainer/HBoxContainer/CollapsibleContainer/HitDiceSelection")
_hit_dice_selection_cc = NodePath("MarginContainer/HBoxContainer/CollapsibleContainer")
_dialog_button = ExtResource("2_6tquj")
metadata/_custom_type_script = "uid://7rp8e3m8fvuh"

[node name="Background" type="TextureRect" parent="."]
visible = false
show_behind_parent = true
layout_mode = 2
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="Description" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 2
bbcode_enabled = true
text = "First line.
Second line."
fit_content = true
scroll_active = false
selection_enabled = true
script = ExtResource("3_pf20m")
metadata/_custom_type_script = "uid://rbc1te7wgcy0"

[node name="Choices" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="CollapsibleContainer" type="Control" parent="MarginContainer/HBoxContainer"]
process_mode = 3
editor_description = "
			A custom/plugin Control node capable of hiding and revealing its children by folding and unfolding.
			
Give feedback at: https://github.com/ArshvirGoraya/Godot-Collapsible-Container"
clip_contents = true
custom_minimum_size = Vector2(392, 526)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("4_nyvyp")
starts_opened = false
folding_direction_preset = 10
sizing_constraint = 1
auto_update_size = 1
sizing_node = NodePath("HitDiceSelection")
metadata/_custom_type_script = "uid://ral4tq3ea3w4"

[node name="HitDiceSelection" parent="MarginContainer/HBoxContainer/CollapsibleContainer" instance=ExtResource("5_15pgc")]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 0.0
offset_bottom = 126.0
grow_horizontal = 2

[connection signal="finished_typing" from="MarginContainer/HBoxContainer/VBoxContainer/Description" to="." method="_on_description_finished_typing"]
[connection signal="save_evaluated" from="MarginContainer/HBoxContainer/CollapsibleContainer/HitDiceSelection" to="." method="_on_save_evaluated"]
